--- a/app/views/earthquakes/_form.html.erb
+++ b/app/views/earthquakes/_form.html.erb
@@ -67,6 +67,10 @@
     <%= f.label :place %><br>
     <%= f.text_field :place %>
   </div>
+  <div class="field">
+    <%= f.label :event_type %><br>
+    <%= f.text_field :event_type %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
