--- a/app/views/earthquakes/upload.html.erb
+++ b/app/views/earthquakes/upload.html.erb
@@ -1,4 +1,4 @@
 <%= form_tag process_earthquakes_path, multipart: true do %>
   <%= file_field_tag :file %>
-  <%= submit_tag "Import CSV" %>
+  <%= submit_tag "Upload CSV" %>
 <% end %>
